--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,6 @@
 {
-  // See https://go.microsoft.com/fwlink/?LinkId=827846
-  // for the documentation about the extensions.json format
   "recommendations": [
-    "ms-azure-devops.azure-pipelines",
-    "ms-vscode.cpptools",
-    "ms-vscode.csharp",
-    "ms-vscode.PowerShell",
-    "twxs.cmake",
-    "DavidAnson.vscode-markdownlint",
-    "vitaliymaz.vscode-svg-previewer"
+    "ms-azuretools.vscode-azurefunctions",
+    "ms-vscode.PowerShell"
   ]
 }
