--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,10 @@
   "powershell.codeFormatting.whitespaceAroundOperator": true,
 
   // Adds a space after a separator (',' and ';').
-  "powershell.codeFormatting.whitespaceAfterSeparator": true
+  "powershell.codeFormatting.whitespaceAfterSeparator": true,
+  "azureFunctions.templateFilter": "All",
+  "azureFunctions.deploySubpath": ".",
+  "azureFunctions.projectLanguage": "PowerShell",
+  "azureFunctions.projectRuntime": "~1",
+  "debug.internalConsoleOptions": "neverOpen"
 }
