--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,6 +59,12 @@
                 "isDefault": true
             },
             "problemMatcher": "$msCompile"
+        },
+        {
+            "type": "func",
+            "command": "host start",
+            "problemMatcher": "$func-watch",
+            "isBackground": true
         }
     ]
 }
